<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_news"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    android:layout_marginTop="0dp"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardElevation="2dp"
    app:contentPaddingBottom="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/titleNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/imageNews"
                android:layout_toRightOf="@+id/imageNews"
                android:contentDescription="@string/Shares"
                android:text="@string/title_st"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Подробнее" />

            <ImageView
                android:id="@+id/imageNews"
                android:layout_width="170dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </RelativeLayout>


        <TextView
            android:id="@+id/textNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/newstext"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <TextView
            android:id="@+id/linkNews"
            android:layout_width="38dp"
            android:layout_height="18dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:autoLink="web"
            android:linksClickable="true"
            android:textAllCaps="true"
            android:textColor="@color/primary_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/MoreInfo"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNews" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
