<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/dealers_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        android:layout_marginBottom="2dp"
        app:contentPaddingTop="5dp"
        app:contentPaddingBottom="5dp">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?android:attr/textSelectHandle" />

            <TextView
                android:id="@+id/titleDealers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="Наименование"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cityDealers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="Город"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/titleDealers" />

            <TextView
                android:id="@+id/addressDealers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="Адрес"
                app:layout_constraintLeft_toRightOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/cityDealers" />

            <TextView
                android:id="@+id/telephoneOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/Op"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                tools:text="@string/Op" />

            <TextView
                android:id="@+id/telephoneSr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/Sr"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="@+id/telephoneOp"
                app:layout_constraintTop_toBottomOf="@+id/telephoneOp"
                tools:text="@string/Sr" />

            <TextView
                android:id="@+id/telephoneNumberOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tel_number"
                app:layout_constraintLeft_toRightOf="@+id/telephoneOp"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/telephoneNumberSr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tel_number"
                app:layout_constraintLeft_toRightOf="@+id/telephoneOp"
                app:layout_constraintTop_toBottomOf="@+id/telephoneOp" />

            <TextView
                android:id="@+id/webSiteDealers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAllCaps="true"
                app:layout_constraintLeft_toRightOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/addressDealers" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>