<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_chem_co"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    android:layout_marginTop="2dp"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardElevation="5dp"
    app:contentPaddingBottom="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="50dp">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <TextView
            android:id="@+id/titleChem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="30sp"
            android:text="@string/title"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleChem">

        </LinearLayout>

        <TextView
            android:id="@+id/chemWebsite"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:autoLink="web"
            android:linksClickable="true"
            android:singleLine="false"
            android:text="@string/website"
            android:textAlignment="center"
            android:textColorLink="@color/primary_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="21dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chemWebsite"
            app:srcCompat="@drawable/ic_public_black_24dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="15dp"
            android:layout_height="17dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toLeftOf="@+id/telephone5"
            app:layout_constraintTop_toTopOf="@+id/telephone5"
            app:srcCompat="@drawable/ic_phone_forwarded_black_24dp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="15dp"
            android:layout_height="17dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toLeftOf="@+id/telephone4"
            app:layout_constraintTop_toTopOf="@+id/telephone4"
            app:srcCompat="@drawable/ic_phone_forwarded_black_24dp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="15dp"
            android:layout_height="17dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toLeftOf="@+id/telephone3"
            app:layout_constraintTop_toTopOf="@+id/telephone3"
            app:srcCompat="@drawable/ic_phone_forwarded_black_24dp" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="92dp"
            android:text="@string/AboutAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/address1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/address2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telephone1" />

        <TextView
            android:id="@+id/address3"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telephone2" />

        <TextView
            android:id="@+id/address4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telephone3" />

        <TextView
            android:id="@+id/address5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary_text"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telephone4" />

        <TextView
            android:id="@+id/telephone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:autoLink="phone"
            android:text="TextView"
            android:textColor="@color/primary_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address1" />

        <TextView
            android:id="@+id/telephone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:autoLink="phone"
            android:text="TextView"
            android:textColor="@color/primary_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address2" />

        <TextView
            android:id="@+id/telephone3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:autoLink="phone"
            android:text="TextView"
            android:textColor="@color/primary_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address3" />

        <TextView
            android:id="@+id/telephone4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:autoLink="phone"
            android:text="TextView"
            android:textColor="@color/primary_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address4" />

        <TextView
            android:id="@+id/telephone5"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:autoLink="phone"
            android:text="TextView"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address5" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="15dp"
            android:layout_height="17dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toLeftOf="@+id/telephone1"
            app:layout_constraintTop_toTopOf="@+id/telephone1"
            app:srcCompat="@drawable/ic_phone_forwarded_black_24dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="15dp"
            android:layout_height="17dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toLeftOf="@+id/telephone2"
            app:layout_constraintTop_toTopOf="@+id/telephone2"
            app:srcCompat="@drawable/ic_phone_forwarded_black_24dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
